# GMF-portfolio-forecasting-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
src/: __init__.py  data_fetch.py  eda.py  preprocess.py  utils.py
src/backtest/: backtesting.py
src/forecast/: Task3_forecast_tsla.py
src/optimize/: portfolio_optimization.py
